<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMS Information</string>
    <string name="action_about">About</string>
    <string name="action_activation">Activation</string>
    <string name="action_clean_smsqueuing">Clear all</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_smsqueuing">Queue sending SMS</string>
    <string name="activation_help">You can unsubscribe via the Google Play Market (pay for subscription will not be returned).</string>
    <string name="activation_month">Monthly subscription</string>
    <string name="activation_month_trial">The trial version for 30 days (hereinafter will automatically be charged the monthly fee per month)</string>
    <string name="activation_purchase">Buy</string>
    <string name="activation_title_purchase">Select activation</string>
    <string name="activation_year">Annual subscription</string>
    <string name="btn_buy">Buy</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="log">History</string>
    <string name="pref_default_log_row">25</string>
    <string name="pref_default_mail_host">imap.host.com</string>
    <string name="pref_default_mail_password">password</string>
    <string name="pref_default_mail_port">993</string>
    <string name="pref_default_mail_subject">SMSINFORMER</string>
    <string name="pref_default_mail_user">email@host.com</string>
    <string name="pref_default_time_sms_send_first">09:00</string>
    <string name="pref_default_max_sms_count_in_one_mail">3</string>
    <string name="pref_default_time_sms_send_last">20:00</string>
    <string name="pref_header_data_sync">Scheduler</string>
    <string name="pref_header_mail">Email</string>
    <string name="pref_header_sms">SMS</string>
    <string name="pref_summary_enable_cut_sms_text">Crop SMS text messages of up to one (60 characters in Russian and 160 - Latin)</string>
    <string name="pref_summary_enable_read_mail_time">Check for messages in the same period of time</string>
    <string name="pref_summary_max_sms_in_one_mail">The maximum number of SMS to send one number from one email message</string>
    <string name="pref_title_enable_cut_sms_text">Crop SMS text</string>
    <string name="pref_title_enable_read_mail_time">Limit time receiving mail</string>
    <string name="pref_title_log_row">Number of lines per page in the magazine</string>
    <string name="pref_title_mail_host">Receiving mail server</string>
    <string name="pref_title_mail_password">Password</string>
    <string name="pref_title_mail_port">Port</string>
    <string name="pref_title_mail_ssl">Use SSL</string>
    <string name="pref_title_mail_store_protocol">Email protocol</string>
    <string name="pref_title_mail_user">Login</string>
    <string name="pref_title_mail_subject">Subject of the letter with the data to send SMS</string>
    <string name="pref_title_max_sms_count_in_one_mail">The maximum number of SMS</string>
    <string name="pref_title_sync_frequency">The frequency of checking the mailbox</string>
    <string name="pref_title_time_sms_send_first">Send SMS to</string>
    <string name="pref_title_time_sms_send_last">Send SMS to</string>
    <string name="title_action_smsqueuing">Queue sending SMS</string>

    <string name="title_activity_about">About</string>
    <string name="title_activity_activation">Activation</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_smsqueuing">Queue sending SMS</string>

    <string name="pref_header_general">General settings</string>
	
	<string-array name="pref_sync_frequency_titles">
        <item>5 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>1 hour</item>
        <item>3 hour</item>
        <item>6 hour</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
	
	<string-array name="pref_mail_store_protocol_list_titles">
        <item>imap</item>
        <!--<item>pop3</item> -->
    </string-array>
    <string-array name="pref_mail_store_protocol_list_values">
        <item>0</item>
        <!--<item>1</item>-->
    </string-array>
    <string formatted="false" name="about_text">App version: %s. License: %s</string>
    <string name="about_text_html">&lt;html&gt;&lt;body&gt;&lt;h1&gt;&amp;nbsp;&lt;/h1&gt;&lt;p style=&quot;text-align: center;&quot;&gt;&lt;strong&gt;About&lt;/strong&gt;&lt;/p&gt;&lt;p&gt;The program is designed to broadcast certain emails on phones through SMS messages.&lt;/p&gt;&lt;p&gt;&amp;nbsp;&lt;/p&gt;&lt;p&gt;&lt;strong&gt;Author: &lt;/strong&gt;Denis Gamza.&lt;/p&gt;&lt;p&gt;&lt;strong&gt;E-mail: &lt;/strong&gt;&lt;a href=\&quot;mailto:denis.gamza@gmail.com\&quot;&gt;denis.gamza@gmail.com&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    <string name="help_text_html">&lt;p&gt;&lt;strong&gt;An example of the content of the letter&lt;/strong&gt;&lt;/p&gt;&lt;p&gt;&lt;strong&gt;Message subject:&lt;/strong&gt;&lt;/p&gt;&lt;p&gt;SMSINFORMER &lt;em&gt;(must coincide with the theme of the program settings)&lt;/em&gt;&lt;/p&gt;&lt;p&gt;&lt;strong&gt;The content of the message:&lt;/strong&gt;&lt;/p&gt;&lt;p&gt;&amp;lt;PhoneList&amp;gt;8ХХХХХХХХХХ;+7ХХХХХХХХХХ;8ХХХХХХХХХХ&amp;lt;/PhoneList&amp;gt;&lt;br/&gt;&amp;lt;MessageText&amp;gt;Text messages to SMS.&amp;lt;/MessageText&amp;gt;&lt;/p&gt;&lt;p&gt;&lt;strong&gt;Description:&lt;/strong&gt;&lt;/p&gt;&lt;ul&gt;&lt;li&gt;&lt;p&gt;The tag &lt;strong&gt;&lt;em&gt;&amp;lt;&lt;/em&gt;&lt;/strong&gt;&lt;strong&gt;&lt;em&gt;PhoneList&amp;gt;&amp;lt;/&lt;/em&gt;&lt;/strong&gt;&lt;strong&gt;&lt;em&gt;PhoneList&amp;gt;&lt;/em&gt;&lt;/strong&gt; It should contain a list \n telephone numbers of the recipients, separated by «&lt;strong&gt;;&lt;/strong&gt;».&lt;/p&gt;&lt;/li&gt;&lt;li&gt;&lt;p&gt;The tag &lt;strong&gt;&lt;em&gt;&amp;lt;&lt;/em&gt;&lt;/strong&gt;&lt;strong&gt;&lt;em&gt;MessageText&amp;gt;&amp;lt;/&lt;/em&gt;&lt;/strong&gt;&lt;strong&gt;&lt;em&gt;MessageText&amp;gt; &lt;/em&gt;&lt;/strong&gt;must contain \n text message.&lt;/p&gt;&lt;/li&gt;&lt;ul&gt;</string>
    <string name="sms_queuing_table_message">Message</string>
    <string name="sms_queuing_table_phone">Phone</string>
    <string name="sms_queuing_clear_ok">Queue cleared</string>
    <string name="sms_queuing_not_clear">The queue is not cleared</string>

</resources>