<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="sync_frequency"
        android:title="@string/pref_title_sync_frequency"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:defaultValue="15"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <EditTextPreference
        android:key="time_sms_send_first"
        android:title="@string/pref_title_time_sms_send_first"
        android:defaultValue="@string/pref_default_time_sms_send_first"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="time_sms_send_last"
        android:title="@string/pref_title_time_sms_send_last"
        android:defaultValue="@string/pref_default_time_sms_send_last"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>

</PreferenceScreen>
