<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activation_title_purchase"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/relativeLayout"
        android:layout_toRightOf="@+id/relativeLayout"
        android:padding="15dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:gravity="center">
    </TextView>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activation_month_trial"
        android:id="@+id/btnMonth"
        android:onClick="onBuyMonthButtonClicked" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activation_year"
        android:id="@+id/btnYear"
        android:onClick="onBuyYearButtonClicked" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activation_purchase"
        android:id="@+id/btnPurchase"
        android:onClick="onPurchaseAppButtonClicked" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activation_help"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:gravity="center" />

</LinearLayout>

