<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activation_title_purchase"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/relativeLayout"
        android:layout_toRightOf="@+id/relativeLayout"
        android:padding="15dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:gravity="center">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:id="@+id/rbtTrial"
            android:checked="true"
            android:text="@string/activation_month_trial"
            android:layout_below="@+id/textView1"
            android:layout_toLeftOf="@+id/textView"
            android:layout_toStartOf="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/rbtTrial"
            android:layout_alignTop="@+id/rbtTrial"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtMonth"
            android:checked="false"
            android:text="@string/activation_month"
            android:layout_below="@+id/rbtTrial"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/textView"
            android:layout_toStartOf="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/textView4"
            android:layout_alignTop="@+id/rbtPurchase"
            android:layout_alignRight="@+id/textView3"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignBottom="@+id/rbtPurchase"
            android:layout_toRightOf="@+id/rbtYear"
            android:layout_toEndOf="@+id/rbtYear"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtYear"
            android:checked="false"
            android:text="@string/activation_year"
            android:layout_below="@+id/rbtMonth"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/textView3"
            android:layout_toStartOf="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/textView2"
            android:layout_alignBottom="@+id/rbtMonth"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/rbtTrial"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtPurchase"
            android:checked="false"
            android:text="@string/activation_purchase"
            android:layout_below="@+id/rbtYear"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/textView4"
            android:layout_toStartOf="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/rbtYear"
            android:gravity="center" />

       </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rbtPurchase">

        <Button
            android:id="@+id/btnYes"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:layout_below="@+id/rbtPurchase"
            android:layout_toRightOf="@+id/relativeLayout"
            android:layout_toEndOf="@+id/relativeLayout"
            android:padding="15dp">
        </Button>

        <Button
            android:id="@+id/btnCancel"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_alignTop="@+id/btnYes"
            android:layout_alignRight="@+id/textView4"
            android:layout_alignEnd="@+id/textView4"
            android:padding="15dp">
        </Button>
    </TableRow>
</LinearLayout>
